# learn_stm32f3

./: Cargo.toml  README.md  openocd.gdb
.cargo/: config.toml
auxiliary/src/: lib.rs
examples/: board_pre_setting.rs  itm.rs  led.rs  led_register.rs  timer.rs
sh/: connect board.bat  itmdump.bat
src/: main copy.rs  main.rs
